package it.polimi.ingsw.am11.cards;

public enum PlayableCardType {
    GOLD,
    RESOURCE,
    STARTER
}
