package it.polimi.ingsw.am11.cards;

public enum PointsRequirementsType {
    COVERING_CORNERS,
    SYMBOLS,
    CLASSIC
}
